--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,17 +1,19 @@
 name: Go
 
 on:
+  workflow_dispatch:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 1
 
     - name: Set up Go
       uses: actions/setup-go@v3
@@ -19,7 +21,10 @@ jobs:
         go-version: 1.18
 
     - name: Test
-      run: go test -v -coverpkg=./... ./...
+      run: go test -v -race -covermode=atomic -coverprofile=coverage.out ./...
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
 
     - name: Build
       run: go build -v ./...
