--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,7 +21,7 @@ jobs:
         go-version: 1.18
 
     - name: Test
-      run: go test -v -race -covermode=atomic -coverprofile=coverage.out ./...
+      run: go test -v -race -covermode=atomic -coverprofile=coverage.out ./... -p 1
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
